--- a/jaimewebdev.com/sass/_base.scss
+++ b/jaimewebdev.com/sass/_base.scss
@@ -1,3 +1,9 @@
+//it outline all the elements to find overflow elements
+* { 
+    outline: 1px red solid !important; 
+    visibility: visible !important 
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -16,20 +22,14 @@
 html {
     box-sizing: inherit;
     font-size: 80%; //1 rem = 10px/16px = 62.5%
-    // overflow-x: hidden;
+    overflow-x: hidden;
 
 }
-
-//it outline all the elements to find whish is outside 
-// * { outline: 1px red solid !important; visibility: visible !important }
-
 
 body {
     font-family: $font-primary;
     line-height: 1.6rem;
-    // overflow-x: hidden;
-
-
+    overflow-x: hidden;
 
 }
 
